--- a/src/skins/tabNavigator/TabNavigatorWithOrientationSkin.mxml
+++ b/src/skins/tabNavigator/TabNavigatorWithOrientationSkin.mxml
@@ -173,7 +173,7 @@
 									 width.topBottom="{hostComponent.width}"/>
 
 	<!--- @private -->
-	<s:Group id="content" width="100%" height="100%">
+	<s:Group id="content" width="100%" height="100%" minWidth="0" minHeight="0">
 
 		<!-- border -->
 		<!--- @private -->
