--- a/src/view/EditingSurface.mxml
+++ b/src/view/EditingSurface.mxml
@@ -52,8 +52,10 @@
 		import view.interfaces.IMultiViewContainer;
 		import view.interfaces.INonDeletableSurfaceComponent;
 		import view.interfaces.ISurfaceComponent;
+		import view.primeFaces.supportClasses.GridBase;
 		import view.primeFaces.surfaceComponents.components.Div;
 		import view.primeFaces.surfaceComponents.components.Grid;
+		import view.primeFaces.surfaceComponents.components.PanelGrid;
 		import view.suportClasses.PropertyChangeReference;
 		import view.suportClasses.events.PropertyEditorChangeEvent;
 		import view.suportClasses.events.SurfaceComponentEvent;
@@ -177,6 +179,10 @@
 				multiViewContainer.addEventListener(IndexChangeEvent.CHANGE, multiViewContainer_indexChangeHandler);
 				itemContainer = multiViewContainer.selectedView;
 			}
+			else if (item is PanelGrid)
+			{
+				this.prepareGridComponent((item as PanelGrid).body as GridBase);
+			}
 			else if (item is SkinnableContainer)
 			{
 				itemContainer = SkinnableContainer(item);
@@ -230,6 +236,10 @@
 				multiViewContainer.removeEventListener(IndexChangeEvent.CHANGE, multiViewContainer_indexChangeHandler);
 				this.cleanupContainer(multiViewContainer.selectedView);
 			}
+			else if (item is PanelGrid)
+			{
+				this.cleanupGridComponent((item as PanelGrid).body as GridBase);
+			}
 			else if (item is SkinnableContainer)
 			{
 				this.cleanupContainer(SkinnableContainer(item));
@@ -240,7 +250,7 @@
 			}
 			else if (item is Grid)
 			{
-				this.cleanupGridComponent(item as Grid);
+				this.cleanupGridComponent(item as GridBase);
 			}
 
 			this.selectedItem = null;
@@ -315,7 +325,7 @@
 			}
 		}
 
-		private function prepareGridComponent(grid:Grid):void
+		private function prepareGridComponent(grid:GridBase):void
 		{
 			if (grid === null)
 			{
@@ -348,7 +358,7 @@
 			}
 		}
 
-		private function cleanupGridComponent(grid:Grid):void
+		private function cleanupGridComponent(grid:GridBase):void
 		{
 			if (grid === null)
 			{
