--- a/src/view/primeFaces/forms/GridForm.mxml
+++ b/src/view/primeFaces/forms/GridForm.mxml
@@ -14,13 +14,11 @@
 
 		import spark.components.Alert;
 
-		import spark.events.GridSelectionEvent;
-		import spark.events.IndexChangeEvent;
-
 		import data.GridListItem;
 
 		import view.interfaces.ISurfaceComponent;
 		import view.primeFaces.supportClasses.GridBase;
+		import view.primeFaces.supportClasses.GridEvent;
 		import view.primeFaces.surfaceComponents.components.Div;
 		import view.primeFaces.surfaceComponents.components.Grid;
 
@@ -55,10 +53,23 @@
 
 		override public function set selectedItem(value:ISurfaceComponent):void
 		{
-			if (selectedItem) selectedItem.removeEventListener(Grid.EVENT_CHILDREN_UPDATED, onGridUpdated);
+			if (selectedItem)
+			{
+				selectedItem.removeEventListener(Grid.EVENT_CHILDREN_UPDATED, onGridUpdated);
+				selectedItem.removeEventListener(GridEvent.SELECTED_COLUMN_CHANGED, onSelectedGridChanged);
+				selectedItem.removeEventListener(GridEvent.SELECTED_ROW_CHANGED, onSelectedGridChanged);
+			}
 
-			super.selectedItem = value;
-			if (value) selectedItem.addEventListener(Grid.EVENT_CHILDREN_UPDATED, onGridUpdated, false, 0, true);
+			if (super.selectedItem != value)
+			{
+				super.selectedItem = value;
+				if (value)
+				{
+					selectedItem.addEventListener(Grid.EVENT_CHILDREN_UPDATED, onGridUpdated, false, 0, true);
+					selectedItem.addEventListener(GridEvent.SELECTED_COLUMN_CHANGED, onSelectedGridChanged);
+					selectedItem.addEventListener(GridEvent.SELECTED_ROW_CHANGED, onSelectedGridChanged);
+				}
+			}
 		}
 
 		override protected function updateDisplayList(unscaledWidth:Number, unscaledHeight:Number):void
@@ -84,8 +95,8 @@
 			var columnItem:GridListItem = new GridListItem("C1", 1);
 
 			rowItem.columns.addItem(columnItem);
-			this.columnsDataProvider = rowItem.columns;
 			this.rowsDataProvider.addItem(rowItem);
+			this.columnsDataProvider = rowItem.columns;
 
 			var grid:Grid = (selectedItem as Grid);
 			grid.addRow();
@@ -132,6 +143,8 @@
 
 		private function deleteColumnButton_clickHandler(event:MouseEvent):void
 		{
+			if (!this.columnsDataProvider || this.columnsDataProvider.length < 1) return;
+
 			var rowItem:GridListItem = dgRows.selectedItem as GridListItem;
 			if (rowItem.columns.length > selectedGrid.selectedColumn)
 			{
@@ -185,26 +198,6 @@
 			_childrenForFocus.push(deleteColumnBtn);
 		}
 
-		protected function onGridSelectionChanged(event:GridSelectionEvent):void
-		{
-			var gridListItem:GridListItem = dgRows.selectedItem as GridListItem;
-			this.columnsDataProvider = gridListItem.columns;
-
-			this.selectedGrid.selectedRow = dgRows.selectedIndex;
-			this.selectedGrid.selectedColumn = 0;
-
-			this.selectedCellDirty = true;
-			this.invalidateDisplayList();
-		}
-
-		private function onColumnListChange(event:IndexChangeEvent):void
-		{
-			this.selectedGrid.selectedRow = dgRows.selectedIndex;
-			this.selectedGrid.selectedColumn = columnList.selectedIndex;
-
-			this.selectedCell = this.getSelectedCell();
-		}
-
 		private function onCreateClick(event:MouseEvent):void
 		{
 			if (!selectedGrid.isEmpty())
@@ -223,6 +216,23 @@
 			if (event.detail == Alert.YES)
 			{
 				createCells(amountOfRows.value, amountOfColumns.value);
+			}
+		}
+
+		private function onSelectedGridChanged(event:GridEvent):void
+		{
+			if (!this.rowsDataProvider || this.rowsDataProvider.length == 0) return;
+
+			if (this.rowsDataProvider.length > event.selectedIndex)
+			{
+				if (event.type == GridEvent.SELECTED_ROW_CHANGED)
+				{
+					var gridListItem:GridListItem = this.dgRows.dataProvider.getItemAt(event.selectedIndex) as GridListItem;
+					this.columnsDataProvider = gridListItem.columns;
+				}
+
+				this.selectedCellDirty = true;
+				this.invalidateDisplayList();
 			}
 		}
 
@@ -274,7 +284,7 @@
 			{
 				var colItem:GridListItem = dp.getItemAt(i) as GridListItem;
 				var itemValue:int = i + 1;
-				colItem.label = String(prefix + itemValue), itemValue;
+				colItem.label = String(prefix + itemValue);
 			}
 		}
 		]]>
@@ -300,8 +310,8 @@
 		<s:DataGrid id="dgRows"
 					width="100%" maxHeight="350"
 					sortableColumns="false" draggableColumns="false"
-					selectionChange="onGridSelectionChanged(event)" requireSelection="true"
-					dataProvider="{rowsDataProvider}" selectedIndex="{selectedGrid.selectedRow}">
+					requireSelection="true"
+					dataProvider="{rowsDataProvider}" selectedIndex="@{selectedGrid.selectedRow}">
 			<s:columns>
 				<s:ArrayList>
 					<s:GridColumn dataField="label" headerText="Row number"/>
@@ -319,7 +329,7 @@
 	<s:FormItem label="Columns" skinClass="skins.StackedFormItemSkin">
 		<s:List id="columnList" width="100%" height="30" labelField="label"
 				dataProvider="{columnsDataProvider}" requireSelection="true"
-				change="onColumnListChange(event)" selectedIndex="{selectedGrid.selectedColumn}">
+				selectedIndex="@{selectedGrid.selectedColumn}">
 			<s:layout>
 				<s:HorizontalLayout gap="2" horizontalAlign="left" verticalAlign="middle"/>
 			</s:layout>
