Simple methods added to parse out component children in an array manner (reference prominic/Moonshine-IDE#350)

--- a/src/view/EditingSurface.mxml
+++ b/src/view/EditingSurface.mxml
@@ -137,6 +137,11 @@
 			{
 				return EditingSurfaceWriter.toCode(this);
 			}
+			
+			public function getComponentsChildren():Array
+			{
+				return EditingSurfaceWriter.getComponentsChildren(this);
+			}
 		}
 
 		public function fromXML(xml:XML):void
