Grid: Fix scenario where selectedRow and selectedColumn initially are -1 (reference prominic/Moonshine-IDE#360)

--- a/src/view/primeFaces/forms/GridForm.mxml
+++ b/src/view/primeFaces/forms/GridForm.mxml
@@ -183,6 +183,16 @@
 
 			this.columnsDataProvider = this.rowsDataProvider.getItemAt(0).columns;
 
+			if (selectedGrid.selectedRow == -1)
+			{
+				selectedGrid.selectedRow = 0;
+			}
+
+			if (selectedGrid.selectedColumn == -1)
+			{
+				selectedGrid.selectedColumn = 0;
+			}
+
 			this.selectedCell = this.getSelectedCell();
 
 			dispatchEvent(new Event(Event.CHANGE));
