--- a/src/view/ComponentsOrganizer.mxml
+++ b/src/view/ComponentsOrganizer.mxml
@@ -2,7 +2,7 @@
 <s:VGroup xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		 xmlns:s="library://ns.adobe.com/flex/spark" 
 		 xmlns:mx="library://ns.adobe.com/flex/mx" xmlns:view="view.*"
-		 show="onShow()">
+		 show="onShow()" xmlns:suportClasses="view.suportClasses.*">
 	<fx:Script>
 		<![CDATA[
 			import mx.collections.ArrayCollection;
@@ -17,20 +17,12 @@
 				components = new ArrayCollection(GenericUtils.getComponentsChildren(MoonshineBridgeUtils.moonshineBridge.getVisualEditorComponent().editingSurface));
 			}
 			
-			private function formattedValue(item:Object):String
-			{
-				return item.name;
-			}
-			
 		]]>
 	</fx:Script>
 	
 	<view:PropertyEditorHeader componentName="Organizer"/>
 	
-	<s:VGroup width="100%" height="100%">
-		<mx:Tree id="tree" dataProvider="{components}"
-				 width="100%"
-				 dragEnabled="true" dropEnabled="true" dragMoveEnabled="true"
-				 labelFunction="formattedValue"/>
-	</s:VGroup>
+	<suportClasses:TreeOrganizer id="tree" 
+								 dataProvider="{components}"
+								 width="100%" height="100%"/>
 </s:VGroup>
