Basic initial expanding of all container leafs (reference prominic/Moonshine-IDE#350)

--- a/src/view/ComponentsOrganizer.mxml
+++ b/src/view/ComponentsOrganizer.mxml
@@ -15,6 +15,13 @@
 			private function onShow():void
 			{
 				components = new ArrayCollection(GenericUtils.getComponentsChildren(MoonshineBridgeUtils.moonshineBridge.getVisualEditorComponent().editingSurface));
+				tree.callLater(function():void
+				{
+					for each (var i:Object in components)
+					{
+						tree.expandChildrenOf(i, true);
+					}
+				});
 			}
 			
 		]]>
