--- a/src/view/primeFaces/forms/GridForm.mxml
+++ b/src/view/primeFaces/forms/GridForm.mxml
@@ -238,6 +238,7 @@
 				{
 					var gridListItem:GridListItem = this.dgRows.dataProvider.getItemAt(event.selectedIndex) as GridListItem;
 					this.columnsDataProvider = gridListItem.columns;
+					this.selectedGrid.selectedColumn = 0;
 				}
 
 				this.selectedCellDirty = true;
