--- a/src/view/primeFaces/forms/GridForm.mxml
+++ b/src/view/primeFaces/forms/GridForm.mxml
@@ -181,8 +181,6 @@
 				this.rowsDataProvider.addItem(rowItem);
 			}
 
-			this.columnsDataProvider = this.rowsDataProvider.getItemAt(0).columns;
-
 			if (selectedGrid.selectedRow == -1)
 			{
 				selectedGrid.selectedRow = 0;
@@ -193,6 +191,7 @@
 				selectedGrid.selectedColumn = 0;
 			}
 
+			this.columnsDataProvider = this.rowsDataProvider.getItemAt(selectedGrid.selectedRow).columns;
 			this.selectedCell = this.getSelectedCell();
 
 			dispatchEvent(new Event(Event.CHANGE));
