--- a/src/view/VisualEditor.mxml
+++ b/src/view/VisualEditor.mxml
@@ -17,7 +17,8 @@
 		<view:ComponentList id="componentList" percentWidth="20" percentHeight="100"
 							visualEditorType="{_visualEditorType}"/>
 		<s:Scroller percentWidth="70" percentHeight="100">
-			<view:EditingSurface id="editingSurface" visualEditorType="{_visualEditorType}"/>
+			<view:EditingSurface id="editingSurface" visualEditorType="{_visualEditorType}"
+								 organizer="{componentsOrganizer}"/>
 		</s:Scroller>
 		<s:Group width="10%" minWidth="250" height="100%">
 			<view:PropertyEditorContainer id="propertyEditor"
@@ -28,10 +29,11 @@
 									  width="100%" top="0" bottom="20"
 									  visible="{bbPropertyPanel.selectedIndex==1}"/>
 			<s:ButtonBar id="bbPropertyPanel" 
-						 bottom="0" right="0" selectedIndex="0">
+						 bottom="0" right="0" selectedIndex="0"
+						 skinClass="skins.VisualEditorButtonBarSkin" requireSelection="true">
 				<s:ArrayList>
-					<fx:String>₲</fx:String>
-					<fx:String>₼</fx:String>
+					<fx:Object icon="@Embed('/assets/list.png')" label="" toolTip="Properties"/>
+					<fx:Object icon="@Embed('/assets/organize.png')" label="" toolTip="Organize"/>
 				</s:ArrayList>
 			</s:ButtonBar>
 		</s:Group>
