--- a/src/view/ComponentsOrganizer.mxml
+++ b/src/view/ComponentsOrganizer.mxml
@@ -2,22 +2,30 @@
 <s:VGroup xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		 xmlns:s="library://ns.adobe.com/flex/spark" 
 		 xmlns:mx="library://ns.adobe.com/flex/mx" xmlns:view="view.*"
-		 show="onShow()" xmlns:suportClasses="view.suportClasses.*">
+		 xmlns:suportClasses="view.suportClasses.*">
 	<fx:Script>
 		<![CDATA[
+			import flash.utils.clearTimeout;
+			import flash.utils.setTimeout;
+			
 			import mx.collections.ArrayCollection;
+			import mx.core.IVisualElement;
 			import mx.core.IVisualElementContainer;
 			
 			import data.OrganizerItem;
+			import components.renderers.OrganizerTreeRenderer;
 			
-			import utils.GenericUtils;
-			import utils.MoonshineBridgeUtils;
+			import view.interfaces.IPrimeFacesSurfaceComponent;
+			import view.primeFaces.surfaceComponents.components.Fieldset;
+			import view.primeFaces.surfaceComponents.components.TabView;
 			
 			[Bindable] private var components:ArrayCollection;
 			
-			private function onShow():void
+			private var foundIndepthItem:OrganizerItem;
+			
+			public function loadFirstData(surface:EditingSurface):void
 			{
-				var tmpArr:Array = GenericUtils.getComponentsChildren(MoonshineBridgeUtils.moonshineBridge.getVisualEditorComponent().editingSurface);
+				var tmpArr:Array = getComponentsChildren(surface);
 				tree.rootContainer = (tmpArr[0] as OrganizerItem).item as IVisualElementContainer;
 				components = new ArrayCollection((tmpArr[0] as OrganizerItem).children);
 				
@@ -31,6 +39,107 @@
 				});
 			}
 			
+			public function addDroppedElement(ownerComponent:IVisualElementContainer, component:IVisualElement):void
+			{
+				findFileWrapperInDepth(components.source, isSubDivComponent(ownerComponent));
+				this.callLater(function():void
+				{
+					if (foundIndepthItem) foundIndepthItem.children.push((component as IPrimeFacesSurfaceComponent).getComponentsChildren());
+					else components.addItem((component as IPrimeFacesSurfaceComponent).getComponentsChildren());
+					
+					refreshItem(foundIndepthItem);
+					foundIndepthItem = null;
+				});
+			}
+			
+			private function getComponentsChildren(surface:EditingSurface):Array
+			{
+				var element:IPrimeFacesSurfaceComponent = surface.getElementAt(0) as IPrimeFacesSurfaceComponent;
+				var componentsArray:Array = [];				
+				var container:IVisualElementContainer = surface;
+				var organizerItem:OrganizerItem;
+				var elementCount:int = 0;
+				
+				if (element is IPrimeFacesSurfaceComponent) container = element as IVisualElementContainer;
+				if (!container)
+				{
+					elementCount = surface.numElements;
+					container = surface;
+				}
+				else
+				{
+					elementCount = container.numElements;
+				}
+				
+				for (var i:int = 0; i < elementCount; i++)
+				{
+					element = container.getElementAt(i) as IPrimeFacesSurfaceComponent;
+					
+					if (element === null)
+					{
+						continue;
+					}
+					
+					organizerItem = element.getComponentsChildren();
+					if (organizerItem) componentsArray.push(organizerItem);
+				}
+				
+				return [new OrganizerItem(container, "ROOT", componentsArray)];
+			}
+			
+			private function findFileWrapperInDepth(items:Array, ownerComponent:IVisualElementContainer):void
+			{
+				// probable termination
+				if (foundIndepthItem) return;
+				
+				for each (var oItem:OrganizerItem in items)
+				{
+					if (oItem.item === ownerComponent)
+					{
+						foundIndepthItem = oItem;
+						return;
+					}
+					else if (oItem.children && (oItem.children.length > 0) && !foundIndepthItem) findFileWrapperInDepth(oItem.children, ownerComponent);
+				}
+			}
+			
+			private function refreshItem(item:OrganizerItem):void
+			{
+				var lastScrollPosition:Number = tree.verticalScrollPosition;
+				var lastSelectedItem:Object = tree.selectedItem;
+				var lastSelectedIndex:int = tree.selectedIndex;
+				var openItems:Object = tree.openItems;
+
+				tree.openItems = openItems;
+				tree.invalidateList();
+				
+				tree.callLater(function ():void
+				{
+					tree.verticalScrollPosition = lastScrollPosition;
+				});
+				
+				var timeoutValue:uint = setTimeout(function():void
+				{
+					tree.selectedItem = lastSelectedItem;
+					
+					// if still there has no selection to the tree
+					if (!tree.selectedItem && lastSelectedIndex != -1) tree.selectedIndex = lastSelectedIndex;
+					clearTimeout(timeoutValue);
+				}, 100);
+			}
+			
+			private function isSubDivComponent(value:IVisualElementContainer):IVisualElementContainer
+			{
+				if (value is TabView) return (value as TabView).div;
+				else if (value is Fieldset) return (value as Fieldset).div;
+				return value;
+			}
+			
+			private function getIconForFile(object:Object):Class
+			{
+				return null;
+			}
+			
 		]]>
 	</fx:Script>
 	
@@ -38,5 +147,7 @@
 	
 	<suportClasses:TreeOrganizer id="tree" 
 								 dataProvider="{components}"
-								 width="100%" height="100%"/>
+								 width="100%" height="100%"
+								 iconFunction="{getIconForFile}"
+								 itemRenderer="{new ClassFactory(OrganizerTreeRenderer)}"/>
 </s:VGroup>
