--- a/src/view/primeFaces/propertyEditors/PanelGridPropertyEditor.mxml
+++ b/src/view/primeFaces/propertyEditors/PanelGridPropertyEditor.mxml
@@ -2,7 +2,7 @@
 <suportclasses:BasePropertyEditor xmlns:fx="http://ns.adobe.com/mxml/2009"
 								  xmlns:s="library://ns.adobe.com/flex/spark"
 								  xmlns:suportclasses="view.suportClasses.*"
-								  xmlns:primeFaces="view.primeFaces.forms.*" xmlns:forms="view.forms.*">
+								  xmlns:primeFaces="view.primeFaces.forms.*" >
 	<suportclasses:layout>
         <s:VerticalLayout gap="10" padding="10" horizontalAlign="contentJustify"/>
     </suportclasses:layout>
